--- a/services/files/front/styles/chat.css
+++ b/services/files/front/styles/chat.css
@@ -51,6 +51,9 @@
     font-size: 115%;
     border-radius: 10%;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #backbutton-container #chat-back-button:hover {
     background-color: rgba(0, 0, 0, 0.2);
@@ -164,7 +167,7 @@
     bottom: 0;
 }
 #chat-input-container input[name="message"] {
-    height: calc(100% - 40px);
+    height: 70%;
     font-size: 150%;
     font-family: inherit;
     padding-left: 25px;
